# face_recon_hy

./: .gitignore  Makefile  README.md  conduit.c  installConduit.sh  installFaceTracker.sh  shadestream_schema.sql  startLandmark.sh  test_db_dump  triangle_start.sh
LandmarkFinder/: hellyeah_test.sh  install.sh  openface_setup.sh  readme.txt
LandmarkFinder/OpenFace/exe/FaceLandmarkImg/: CMakeLists.txt  FaceLandmarkImg.cpp
LandmarkFinder/OpenFace/lib/local/LandmarkDetector/include/: LandmarkDetectorUtils.h
LandmarkFinder/OpenFace/lib/local/LandmarkDetector/src/: LandmarkDetectorUtils.cpp
faceTracker/: account.html  index.html  login.html  login.php  signup.html
faceTracker/css/: bootstrap.css  grayscale.css
faceTracker/eyeLike/: CMakeLists.txt
faceTracker/eyeLike/src/: CMakeLists.txt  findEyeCenter.cpp  main.cpp
faceTracker/php/: account.php  db_man.php  db_utils.php  login.php  logout.php  post_utils.php  security.php  session_man.php  session_utils.php  signup.php  upload.php
faceTracker/python/: landmarks.py  openfacetest1.py  triangles.py
